[package]
name = "plane-projection"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency fact approximate distance on Earth calculation"
readme = "README.md"
repository = "https://github.com/kinkard/plane-projection"
license = "MIT OR Apache-2.0"
keywords = ["geo", "maps"]
include = ["**/*.rs"]

[dependencies]
# No dependencies
