[package]
name = "plane-projection"
version = "0.3.2"
edition = "2024"
rust-version = "1.85"
description = "Zero-dependency fact approximate distance on Earth calculation"
readme = "README.md"
repository = "https://github.com/kinkard/plane-projection"
license = "MIT OR Apache-2.0"
keywords = ["geo", "maps"]
include = ["src/*.rs"]

[dependencies]
# No dependencies

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "projection_benchmarks"
harness = false
